# ChangeLog for dev-perl/CDDB_get
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.47 2012/06/24 13:00:07 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*CDDB_get-2.280.0 (09 Apr 2012)

  09 Apr 2012; Torsten Veller <tove@gentoo.org> +CDDB_get-2.280.0.ebuild:
  Version bump

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  27 Dec 2011; Torsten Veller <tove@gentoo.org> -CDDB_get-2.27.ebuild:
  Cleanup

  19 Nov 2011; Torsten Veller <tove@gentoo.org> CDDB_get-2.270.0.ebuild:
  Merge KEYWORDS from 2.27

*CDDB_get-2.270.0 (04 Sep 2011)

  04 Sep 2011; Torsten Veller <tove@gentoo.org> +CDDB_get-2.270.0.ebuild:
  Maintenance. Use CPAN mirrors. Change version scheme

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org> CDDB_get-2.27.ebuild:
  Ebuild maintenance

  07 Sep 2006; Michael Cummings <mcummings@gentoo.org> -CDDB_get-2.2.ebuild,
  -CDDB_get-2.10-r2.ebuild, -CDDB_get-2.23.ebuild, -CDDB_get-2.25.ebuild:
  Cleaning out old ebuilds

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> CDDB_get-2.2.ebuild,
  CDDB_get-2.10-r2.ebuild, CDDB_get-2.23.ebuild, CDDB_get-2.25.ebuild,
  CDDB_get-2.27.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org> CDDB_get-2.27.ebuild:
  Marking stable amd64

  27 May 2006; Bryan Østergaard <kloeri@gentoo.org> CDDB_get-2.27.ebuild:
  Stable on alpha.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> CDDB_get-2.27.ebuild:
  Mark 2.27 stable on ia64

  27 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> CDDB_get-2.27.ebuild:
  Stable on sparc

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> CDDB_get-2.27.ebuild:
  Stable on ppc64

  23 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> CDDB_get-2.27.ebuild:
  Stable on ppc.
