@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST CDDB_get-2.27.tar.gz 21820 SHA256 bab3b34efb33b86604440fdcdc2a00e27313055af7bb8f0d9cef0ccfe2ba6122 SHA512 21260b7e9ed1bd559cbe112062b9f72a5517ac48bf4abcf449e0b90fc35228e0406cbb58a79a4d8024b2e5a6327f41b92fe29358404750a2e97cbcfb01e7f3b9 WHIRLPOOL a1429e270f29d8e31b39d76137083986efe355f4c4a02acccec864bae8f42425473b5f3a59db445a10991871a47f95ed33249398df3fdb0951be81cbde902fbf
 DIST CDDB_get-2.28.tar.gz 22052 SHA256 bdccba1fa8e4c1cf3189c5e5a3529a6693a648aa5282b597538c7aaddce6d9c9 SHA512 436156971a9c52c364ef86b670b212973566b9b77a4411edada144eff370d166ed105a13488650c7092ea90bc2754bb203684396fce648b132e379945ca5f1f9 WHIRLPOOL 76de3be49e300d7989d2c333479b6d7c43b72258c457c502ce49d1f4bde6e38d37b84646d26e0906e5cf1b27e3250fa1afb4c64faa785d12f64bb2f7786648e6
-EBUILD CDDB_get-2.270.0.ebuild 622 SHA256 9a741843c2340d28f3cb5a8cdd9a47ff177047283fd734d0cb567c88a2a984eb SHA512 f25653efd60c4d7e7935f22e0d80d455cc0d5b8fe855e1e99b77d52b57b0fb7b28f077311afcc47458efafe7c0742dc40d05c89d383f8db57d3d094e1767f47c WHIRLPOOL c796bbdac22b81034bd1e7a1c46a1570c462c6cf77d6dc416912e5f914d37093b5021cbcd3075cd79cbc44eec320e84ce4b3f7aae9c19f0fc9df77c8f162c890
-EBUILD CDDB_get-2.280.0.ebuild 629 SHA256 cc73c1204075f128a86db1b19c4c2465a64cc14e395b5b6b6ef91ff5e1d8cc79 SHA512 6b4d7429dc6bec3390e3dc64359637edf59295a9c8a2d65e1c2b4a9a021b946a1b8cb2fd2188e40d0dc2ffafb097b258e59c7c1fc84df10a220df7bcaf3fc28d WHIRLPOOL 8a5cf06dafe690114a94bc0f4d97f99b5c730317f58cf3eeca67d9b3ce740d03d055fc00a1ffb6dfecd20355f574be677d0b9b0d116fc9ed0f5a4eea669e2e7b
-MISC ChangeLog 5651 SHA256 77ee6d69dd337a9e57c759c41bb99b0af46d03375279b0467e911978f4e5acff SHA512 5b7fe806cea5373fda3320a449af8caecd95bd12abf89a0407a158483a9b14f7a31382813a1a12ec2903a1458a49d6733d190dead6a2a473ee9a0fff34c4aa85 WHIRLPOOL 8b2ae74781fbea9eb6b04febff93fee12580961b5611de5f2438eb52dc0e2f918e7103dee4fc530acc1efb3a2007518037d519d8c426d2eb550b677ff923f642
+EBUILD CDDB_get-2.270.0-r1.ebuild 624 SHA256 f2b941ffa3ae3677818bd799ca6a41262cd5ead5a4f137342625604fd43c4d48 SHA512 2bebed942dca2d7009d47598e15c2fbcda434b272fae61366cc8d0520a7f1c5fb493b0314178a23eb91dfbc16e3a49e3f072d924caf8c19afc54ac0e07b094c7 WHIRLPOOL 04bed5c793fab7767929df233baa84535cc6416f950986a2847ffe3785f95c815320105183fecd5429fb7c8b17832703337bfdc9ca3d45959bee5fbf6e9802be
+EBUILD CDDB_get-2.280.0-r1.ebuild 631 SHA256 202b3811ca58c4b117da4e83e4b4c2a26cca26ac5fcbb967dcabd401af10531e SHA512 48c00c4a54d9899ae354472420db54adb267225402c2d6ff6ffe3bb8a25a594a27ab6af6f3071e065350db48fc9a7cb243cbcb0f86be394df244bb003294c63b WHIRLPOOL 877ffe64a54fc54aa4ebc78268c05520f3dfedafee237e079fc0fa159641cabe1ec305b7fcf34e6908902798ae873931f212906762412e6027a872db68bd24ed
+MISC ChangeLog 6046 SHA256 82a7b4f8d4d0f2d93a547f4ed8ab3499edb86b2e72534e8b5847e1a9993402e6 SHA512 ac1867122dab5428dc6847b6fdd94ec9b669b793f7a64cb63d52b91b869d227e13189a340cf401fc2cfb3d3f2833c69f2a0b2e854bc4e31c0ac32095cd94b9ec WHIRLPOOL 0a57d02e70c278f1456d026aefbf077f153f59161d54e7deda9570502643544dac90513c7c5e149e1a2013d710f664cf55fc4c54d3e46a4fb36c60c2676d223e
 MISC metadata.xml 346 SHA256 32d3e1fb651a643bede542d772f052f0814b5a584a29df470d734e0abd78404f SHA512 5bfc5cfe9ec7f51452d608021c84b4ddda8e24de02a2999fdfce1899b33e9049332d644efb3d25ce87b54c0e15704d61dc1e96cf93dda0948920006cc981398c WHIRLPOOL 6c35aa2232405e5d6573448a09013a009369412c4fd0e0310b0b8ca3b3e26c30acd103e44187d1102caa24ac5962c87be918c79f1964ebf32f5792a1aaf4b7e6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP3keMACgkQ2ugaI38ACPBZvAD+IFf9rA49EXKC5oLImB5pOCEY
+VIz4Ddn6Gzv6vM4Gf6oA/jMqj4tik7ZPU88Zyk7WE1zrj8ICleCBmQ3k5qzd0ubS
+=goSq
+-----END PGP SIGNATURE-----
