@@ -1,8 +1,8 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI-FastTemplate/CGI-FastTemplate-1.90.0.ebuild,v 1.2 2011/09/03 21:05:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI-FastTemplate/CGI-FastTemplate-1.90.0-r1.ebuild,v 1.1 2014/08/22 18:55:09 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=JMOORE
 MODULE_VERSION=1.09
