@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST CGI-FastTemplate-1.09.tar.gz 13635 SHA256 7d9d6b57bef2c3a33142c4cf0ca07d8801575e53b7f054b83df9f616bd2a7773 SHA512 ff8907573d86cdc534ddd8f1b3b1d697df9eab429510b3b090371f01d856d8a374a7a0cfe0a2709468dd5e8be1b5738801859e0b138adcf5357daff09343136b WHIRLPOOL 11cb04a636335f4f41e1b05ad7a31bee88ec117eb9b5375a0e0959521e2511bde07cbba04aad39f26a53cebb843bdd7d39b6dda7481804dfc62dafd30ee93207
-EBUILD CGI-FastTemplate-1.90.0.ebuild 415 SHA256 987bbf1832caee1fc92c5fe8efd1b4dde422dcf37cf8116eea813ac9c2a2fb9c SHA512 4ee0ad1a6d221db362be5fdfee10c19310f6bc30936a223d690acc1d90a05da4cb5c34aa44c513090f736c02bc3ae9fcb80fbaf41942cebcffdcdb0cf885ee9c WHIRLPOOL 3309b0db1b6fd2f451451846a0747a7c65bc42ed044ec657b2e03f95a65d63f3b8c264bf702cb936a81a312c21d020bf5beabe81fb71ceff5bcfb9cb4e0dc9ab
-MISC ChangeLog 2268 SHA256 f89415d732351bacf0ad0fc4591aef032d77543a542d839e55a448b1225e1e0e SHA512 f0e396a88a57a6498b5c297cc955afef51ccf3eae6e8d86814aeccb416168060daf912778cd3cd09faaad243b9208cdaaf07499272745d6d8d4724b55fd7820d WHIRLPOOL cce96687222d7d492b1155b64bc18fb17825ccb983b6f69683b4660dbc5398396d0fd05fe412ac9df3e8c2cfe085d1d504bc237e2be5effa3d884c60974149c9
+EBUILD CGI-FastTemplate-1.90.0-r1.ebuild 417 SHA256 78586726687bae71ea62bc8f3f1acf60ee56ebbc14b0e15a98a73070a25c6799 SHA512 c936f61a7390e71425b76f00369f2efe66245da6121045d8a82de6fe51c9f3447f397935d0759f416ce89411b4385c029657552b5f81c4810ca5d2c15eddeae4 WHIRLPOOL a17946c59512ce5f04b9cef07be73ae8b285ee7fbadc57d9d3603ba7d7865cb25ded8340ec0f82a78ba075bbcc9fc0c9d541bbd5bcee37c988b003c7c2f451c8
+MISC ChangeLog 2592 SHA256 01d3ab53b331d78be9916989201361e0b3fef3d9c6b5e3979fd015eae0402662 SHA512 0f2e4737047ec2c818cd977190593216d85bf090ea2edd88cf38fcdab9eebd8bdf6ca4e5a9b4dc519a941f0adb7067c6b543211a27d8cdfea2940d7302fcdc7c WHIRLPOOL 7f276ed9b81283260f0e1ad407b3217382c06824c4b4f77fa19fad1a6bde8d853f833ae99114c5fd84bf05e795a4eda7984e6f2e6ba8f4ad95cfd3287e0189c0
 MISC metadata.xml 306 SHA256 13642ab833c73b8f1170b77c6ed68289a8d4c68022ce5e0613136849b2df13fd SHA512 2eae7cf93299c818b4cac6ec174c5c251a0bec35b32c38a627f4c7dbd9856e3e38bdfc83a5ea1706fa2cdc6e6f2be6d132fe2ec0b644c0a80467ad7d63a5a822 WHIRLPOOL 37c1a4d665fff84ec749efeb94b4c7c5480b91e9fdc6401c3b0091e71d6d4993ebf2aede441a292dbb32a8f3267d52d35d8122d5e3abf91cbd85bd3effb54598
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP3khkACgkQ2ugaI38ACPAZLAD+IO15U2XzZp+xScV86Illhu5B
+2LoBfchjYuZQIMyB3V4A/ioLG7dbuPBHoJh1g4P3nZrKjWC85y8kC1d3xIhFWiFL
+=3ZeU
+-----END PGP SIGNATURE-----
