@@ -1,8 +1,8 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/Class-C3-0.250.0.ebuild,v 1.7 2014/02/02 16:27:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/Class-C3-0.250.0-r1.ebuild,v 1.1 2014/08/22 18:56:04 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=MSTROUT
 MODULE_VERSION=0.25
