@@ -4,15 +4,13 @@ Hash: SHA256
 DIST Class-C3-0.23.tar.gz 36194 SHA256 194587bce162d714359c1d3149883296a2d4ebcb575e36d825e42038d38e1c46 SHA512 70e194781519f77a9a8514f5a7c998f4d99f5b6dbd8faa4d99dc8af4fa733a72f58b7acd3ac96ae946a417b195d7003729fd0f3f67ae31b613be7d3588fa57ab WHIRLPOOL f132b41d1dd6c97cde41818d584415bb303ea1322e7f904d656ab69ba432a58c9f46eb39354ca425a733e282729b97577ffe80494523bcab06536c94aa873aa5
 DIST Class-C3-0.25.tar.gz 39566 SHA256 344506d60e2e5b045a3bdeba7925cc0d5e1e161129ee44131a8c2a3a4d4acf4f SHA512 6c61f85d60869173d726f05debc018575118b4856065ce17fad82d56c279f76b3a68ec9d3286648834833fe696dae27f38f96813767c9a51a43f84355805175c WHIRLPOOL adc2c76c9fcde122ccf03671916c9762350badfcbf05b9caae36e967ff4cb61143ff5a3f18e3a7e83f3e4a56352658ca7ecbf1dd7688831aca70d2e7b5745df0
 EBUILD Class-C3-0.230.0.ebuild 641 SHA256 ea70a741447c6877e30aba7804b0f3d102990e7e631c98bf1482c480f0e18a62 SHA512 c04a8bd9b99b5f01d5d5584762b48c5ea15c37730936c0509a31a3f48dbe5933c850ac0d43c2877b9dde080644d25f0e95539873649ea157ab693fe9ae87f428 WHIRLPOOL 0293d6c95ee97fdd443a7244bf2114db8f192fcd630c6af641c14c7fe075b0bfcfb633151349540d8d7fc04298d05bbeb6fc5dfd54ad444f89cce47c0b996e87
-EBUILD Class-C3-0.250.0.ebuild 643 SHA256 e239564e02d82edc2d66cca916e5d2741d07cefe4fd245d0a1b0291ff5ba97b7 SHA512 ee75b6bf7ffaa72746618a1b6020749beb49eb0576c4514f94e1b11caf7ec6a5a148a9ab0114a225a025fcbdd78c3b0bde33e91de478ca49d4ead1dd91b27d75 WHIRLPOOL a11f8bea0313d53e31b2d0930619eafb3c6daa8581dc64955fd9cfdac7a3c984a3809547a097b54eb639c484cac514ea90c8d8ba0f0ae08041374062ec09d0cf
-MISC ChangeLog 3902 SHA256 b51c0792c75b77b3fb6b6d45dfaa6bd5b3bdd84a8060dc316fe7b400011901f8 SHA512 05cd242a39ac5167b041e1b387c3261324762fb06065a6295b07432279dc4db5dacaca259a24902f3c866987f44f0d0522813ce2dcb268ac0ea1bb49b174a4a8 WHIRLPOOL e0a800cfb3ffc9f06fdce89285334c578f744d401303c5a9a260f4afc92fe9890b9325a81f04e17e660d613809648d828dfbf7da44ace1f03b5ea0e988e831a3
+EBUILD Class-C3-0.250.0-r1.ebuild 642 SHA256 bd1ba6f3e684285ad0b098de087bea061720c6f7fa70d5bbb26560b279a3f9dc SHA512 736b01988cf1bf811ba63641364a5e97bcbd3307799c1410e6876812e8618264ccf9111f881ccc0d6c54016f0f4a3b3e626c22188ca8bf8ffeb5a3fc42c3e6e6 WHIRLPOOL c858ef4a2c260b59be53a4e1eb4949157327df0fad396e289da91d92cc798e56591a5469a1fd59d807ad0539edca57a983fe8656fe5c23bcb036362ba1fa15c9
+MISC ChangeLog 4202 SHA256 7a2ded75559da0ceab5b5e05293c9672a945748330ecf03ba09359476cc58b8b SHA512 574ee112416c95f5b162ae23688b1320b1ee76e9766d055cfc7445f40da83059946783d9ebce07144e290afe10384abb852d1528333f5dd317bd56dbec12698e WHIRLPOOL deeff4ea252098a32ca53168942170d4d04380e1c73423d53a004f1ef8af575b115c7fd5d47b5e081a06cc77e6f80ff5e6dc1a7eeb7d037297b49f05a28380aa
 MISC metadata.xml 290 SHA256 dd088dfdfd68d8461afe8f43de04390d4e76cb47a340a6420f08ddb5c8b094e5 SHA512 60007a98f2b0da24bfd2b49ad3bba4f81d8736416074feede73cb311d9302ede7bd3fdbb839b98dcbf76321dd679c40b89749ec314cdf55dd32e664c19e62d4f WHIRLPOOL b5cdc3ea2944def8a48ebf62e678b40f08048bd99c40b13a3b62d57e29bfaa8dbaee52f4831c403ab3080239becca979f5acbc0b3c823e004396f09b11246e69
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iJwEAQEIAAYFAlLuc28ACgkQG9wOWsQutdZRqAP+N8AhOngj11qK3FrI/2HhiIIe
-kMJg57A7PwITGeBWdQuCvHWGE2K2iww2fUvznHnp5owdB7HIcN1DnByVFIVHW2+c
-Qk2V1gsSAoS7YZs3ln94tByL1sZayBs4bK9N75rkREGejTrLZK9MCGNSP1gMnPrW
-fA4KloCt9Ds4m/YZGNg=
-=bmb2
+iF4EAREIAAYFAlP3kksACgkQ2ugaI38ACPBwfgEApI8EEDMMWAEKUD492jkjZLW4
+e7NSeH8DASQvzmbneo0A/2jo4fB4KNIX9tx/Ph/p6AwvkvyGYE/cYkzb1iJB3rhK
+=WlbQ
 -----END PGP SIGNATURE-----
