@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/CGI-FastTemplate
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI-FastTemplate/ChangeLog,v 1.18 2012/06/24 13:00:27 tove Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI-FastTemplate/ChangeLog,v 1.19 2014/08/22 18:55:09 axs Exp $
+
+*CGI-FastTemplate-1.90.0-r1 (22 Aug 2014)
+
+  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +CGI-FastTemplate-1.90.0-r1.ebuild, -CGI-FastTemplate-1.90.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
