@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Class-C3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.34 2014/02/02 16:27:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.35 2014/08/22 18:56:04 axs Exp $
+
+*Class-C3-0.250.0-r1 (22 Aug 2014)
+
+  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +Class-C3-0.250.0-r1.ebuild, -Class-C3-0.250.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   02 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Class-C3-0.250.0.ebuild:
   amd64/x86 stable wrt bug #492086
