@@ -1,6 +1,15 @@
 # ChangeLog for dev-perl/CDDB_get
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.47 2012/06/24 13:00:07 tove Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.48 2014/08/22 18:54:19 axs Exp $
+
+*CDDB_get-2.270.0-r1 (22 Aug 2014)
+*CDDB_get-2.280.0-r1 (22 Aug 2014)
+
+  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +CDDB_get-2.270.0-r1.ebuild, +CDDB_get-2.280.0-r1.ebuild,
+  -CDDB_get-2.270.0.ebuild, -CDDB_get-2.280.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
